use-cases-custom/uc1-ws/02-gateway.yaml
# Gateway (listener)
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keepalive-timeout-gateway
  namespace: default
spec:
  gatewayClassName: tigera-gateway-class
  listeners:
  - name: uc1-http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
