use-cases-custom/uc1-ws/03-httproute-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend-timeout-policy
  namespace: uc1-custom
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: keepalive-timeout-route

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keepalive-timeout-route
  namespace: uc1-custom
spec:
  parentRefs:
  - name: keepalive-timeout-gateway
    namespace: default
    # sectionName: uc1-http  <-- Remove or duplicate this to attach to HTTPS
  hostnames:
  - "app.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: uc1-backend
      port: 3000
    timeouts:
      request: 3600s
      backendRequest: 590s
